Scene drop-down orders by length instead of alphabetically (stable) without query #86891

Closed
opened 2021-03-24 12:06:54 +01:00 by Dirk Wallenstein · 4 comments

System Information
Operating system: NA
Graphics card: NA

Blender Version
Broken: master
Worked: 2.92

Short description of error

Since f951aa063f the scene selection dropdown is no longer sorted alphabetically. That is because it gets always sorted for the shortest name with an empty search query.

Maybe there should be a more deliberate distinction. A quick fix is to prevent the additions in the mentioned commit.

In the blend file there are scenes with different length. Open with (eg) 2.92 or master.

Exact steps for others to reproduce the error

  • factory startup
  • add scenes where the length is opposite to their alphabetic order

scene-names-with-different-length.blend

**System Information** Operating system: NA Graphics card: NA **Blender Version** Broken: master Worked: 2.92 **Short description of error** Since f951aa063f7a002f4378d3f916750c5d917f4520 the scene selection dropdown is no longer sorted alphabetically. That is because it gets always sorted for the shortest name with an empty search query. Maybe there should be a more deliberate distinction. A quick fix is to prevent the additions in the mentioned commit. In the blend file there are scenes with different length. Open with (eg) 2.92 or master. **Exact steps for others to reproduce the error** - factory startup - add scenes where the length is opposite to their alphabetic order [scene-names-with-different-length.blend](https://archive.blender.org/developer/F9906950/scene-names-with-different-length.blend)

Added subscriber: @d-egg

Added subscriber: @d-egg

The quickfix that works: https://developer.blender.org/D10802

The quickfix that works: https://developer.blender.org/D10802

This issue was referenced by c0a4c8c3fa

This issue was referenced by c0a4c8c3fa68a7343a8444aaf4948f309adec4d6
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Jacques Lucke self-assigned this 2021-03-24 12:55:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86891
No description provided.