Fix T86891: only sort query results for shortest string if there is a query

Differential Revision: https://developer.blender.org/D10802